--- a/.github/workflows/daily-news-update.yml
+++ b/.github/workflows/daily-news-update.yml
@@ -30,7 +30,7 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: arn:aws:iam::YOUR_AWS_ACCOUNT_ID:role/YOUR_CDK_ROLE_NAME # TODO: Replace with your Role ARN
-          aws-region: ${{ vars.AWS_REGION }} # Using a non-secret GitHub Variable
+          aws-region: ${{ vars.AWS_REGION }} 
 
       - name: Fetch latest news
         run: npm run backfill-newsapi.org
