--- a/.github/workflows/daily-news-update.yml
+++ b/.github/workflows/daily-news-update.yml
@@ -26,11 +26,11 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: arn:aws:iam::YOUR_AWS_ACCOUNT_ID:role/YOUR_CDK_ROLE_NAME # TODO: Replace with your Role ARN
-          aws-region: ${{ vars.AWS_REGION }} 
+      # - name: Configure AWS Credentials
+      #   uses: aws-actions/configure-aws-credentials@v4
+      #   with:
+      #     role-to-assume: arn:aws:iam::YOUR_AWS_ACCOUNT_ID:role/YOUR_CDK_ROLE_NAME # TODO: Replace with your Role ARN
+      #     aws-region: ${{ vars.AWS_REGION }} 
 
       - name: Fetch latest news
         run: npm run backfill-newsapi.org
