--- a/.github/workflows/daily-news-update.yml
+++ b/.github/workflows/daily-news-update.yml
@@ -50,19 +50,17 @@ jobs:
           fi
 
       - name: Commit and push changes
-        if: steps.git-check.outputs.changes
+        if: steps.git-check.outputs.changes == 'true'
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add -A
-          git commit -m "feat: daily news update"
+          git commit -m "feat: daily news update" || echo "No changes to commit"
           git push
 
       - name: Build site
-        if: steps.git-check.outputs.changes
         run: npm run build
 
       - name: Deploy to S3
-        if: steps.git-check.outputs.changes
         run: |
           aws s3 sync public/ s3://${{ vars.ORIGIN_BUCKET }} --delete
