--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "gatsby-transformer-json": "^5.14.0",
     "gatsby-transformer-remark": "^6.14.0",
     "gatsby-transformer-sharp": "^5.14.0",
+    "instantsearch.js": "4.10.0-experimental-typescript.0",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
