--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
+    "deploy": "gatsby build && aws s3 sync ./public/ s3://byedonald3stack-websitebucket75c24d94-qo97w51klbe9 --delete",
     "typecheck": "tsc --noEmit",
     "theme": "chakra-cli tokens src/theme/index.ts",
     "theme:watch": "chakra-cli tokens src/theme/index.ts --watch",
@@ -45,6 +46,7 @@
     "gatsby": "^5.11.0",
     "gatsby-plugin-algolia": "^1.0.3",
     "gatsby-plugin-catch-links": "^5.14.0",
+    "gatsby-plugin-google-gtag": "^5.14.0",
     "gatsby-plugin-image": "^3.14.0",
     "gatsby-plugin-react-svg": "^3.3.0",
     "gatsby-plugin-robots-txt": "^1.8.0",
