--- a/package.json
+++ b/package.json
@@ -37,54 +37,54 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.24.3",
-    "@aws-sdk/client-bedrock-runtime": "^3.844.0",
+    "@aws-sdk/client-bedrock-runtime": "^3.883.0",
     "@chakra-ui/icons": "^2.2.4",
-    "@chakra-ui/react": "^2.10.6",
+    "@chakra-ui/react": "^2.10.9",
+    "@chakra-ui/styled-system": "^2.12.0",
     "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@opensearch-project/opensearch": "^3.5.1",
-    "@types/algoliasearch": "^3.34.11",
     "@types/dotenv": "^6.1.1",
     "@types/react-instantsearch": "^6.10.4",
-    "algoliasearch": "^5.32.0",
-    "dotenv": "^17.2.0",
+    "algoliasearch": "^5.37.0",
+    "dotenv": "^17.2.2",
     "fast-levenshtein": "^3.0.0",
     "framer-motion": "^11.18.2",
-    "gatsby": "^5.11.0",
+    "gatsby": "^5.15.0",
     "gatsby-plugin-algolia": "^1.0.3",
-    "gatsby-plugin-catch-links": "^5.14.0",
-    "gatsby-plugin-google-gtag": "^5.14.0",
-    "gatsby-plugin-image": "^3.14.0",
+    "gatsby-plugin-catch-links": "^5.15.0",
+    "gatsby-plugin-google-gtag": "^5.15.0",
+    "gatsby-plugin-image": "^3.15.0",
     "gatsby-plugin-react-svg": "^3.3.0",
     "gatsby-plugin-robots-txt": "^1.8.0",
-    "gatsby-plugin-sharp": "^5.14.0",
-    "gatsby-plugin-sitemap": "^6.14.0",
-    "gatsby-remark-copy-linked-files": "^6.14.0",
-    "gatsby-remark-images": "^7.14.0",
-    "gatsby-remark-prismjs": "^7.14.0",
-    "gatsby-remark-responsive-iframe": "^6.14.0",
-    "gatsby-remark-smartypants": "^6.14.0",
-    "gatsby-source-filesystem": "^5.14.0",
-    "gatsby-transformer-json": "^5.14.0",
-    "gatsby-transformer-remark": "^6.14.0",
-    "gatsby-transformer-sharp": "^5.14.0",
+    "gatsby-plugin-sharp": "^5.15.0",
+    "gatsby-plugin-sitemap": "^6.15.0",
+    "gatsby-remark-copy-linked-files": "^6.15.0",
+    "gatsby-remark-images": "^7.15.0",
+    "gatsby-remark-prismjs": "^7.15.0",
+    "gatsby-remark-responsive-iframe": "^6.15.0",
+    "gatsby-remark-smartypants": "^6.15.0",
+    "gatsby-source-filesystem": "^5.15.0",
+    "gatsby-transformer-json": "^5.15.0",
+    "gatsby-transformer-remark": "^6.15.0",
+    "gatsby-transformer-sharp": "^5.15.0",
     "instantsearch.js": "4.10.0-experimental-typescript.0",
-    "prismjs": "^1.29.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "prismjs": "^1.30.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
-    "react-instantsearch": "^7.16.1",
-    "recharts": "^2.15.1"
+    "react-instantsearch": "^7.16.2",
+    "recharts": "^2.15.4"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
-    "@chakra-ui/cli": "^2.3.0",
+    "@chakra-ui/cli": "^2.5.8",
     "@types/fast-levenshtein": "^0.0.4",
-    "@types/node": "^20.19.6",
-    "@types/react": "^18.0.29",
-    "@types/react-dom": "^18.0.11",
-    "axios": "^1.10.0",
+    "@types/node": "^20.19.13",
+    "@types/react": "^18.3.24",
+    "@types/react-dom": "^18.3.7",
+    "axios": "^1.11.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.0.2"
+    "typescript": "^5.9.2"
   }
 }
